search ticket by title & jira number
